--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,17 @@
-font_family        Go Mono Regular
-bold_font          Go Mono Bold
-italic_font        Go Mono Italic
-bold_italic_font   Go Mono Bold Italic
+#: Kitty settings
+
+font_family        Fira Code Retina
+bold_font          auto
+italic_font        auto
+bold_italic_font   auto
 font_size          12.0
+
+adjust_line_height  0
+adjust_column_width -1
+
+disable_ligatures always
+
+cursor_stop_blinking_after 10.0
+cursor #666
+
+scrollback_lines 10000
