--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 #: Kitty settings
 
-font_family        Fira Code Retina
+font_family        Go Mono Regular
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
@@ -13,5 +13,7 @@ disable_ligatures always
 
 cursor_stop_blinking_after 10.0
 cursor #666
+
+macos_thicken_font 0.1
 
 scrollback_lines 10000
