--- a/kitty.conf
+++ b/kitty.conf
@@ -5,15 +5,20 @@ bold_font          auto
 italic_font        auto
 bold_italic_font   auto
 font_size          12.0
-
 adjust_line_height  0
 adjust_column_width -1
-
 disable_ligatures always
-
 cursor_stop_blinking_after 10.0
 cursor #666
-
 macos_thicken_font 0.1
-
 scrollback_lines 10000
+mouse_hide_wait 3
+macos_hide_titlebar no
+
+tab_separator "|>"
+active_tab_foreground   #000
+active_tab_background   #eee
+active_tab_font_style   bold-italic
+inactive_tab_foreground #444
+inactive_tab_background #999
+inactive_tab_font_style normal
