--- a/kitty.conf
+++ b/kitty.conf
@@ -1,16 +1,16 @@
 #: Kitty settings
 
-font_family        Go Mono Regular
+font_family        Iosevka Medium
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
-font_size          12.0
+font_size          13.2
 adjust_line_height  0
 adjust_column_width -1
 disable_ligatures always
 cursor_stop_blinking_after 10.0
 cursor #666
-macos_thicken_font 0.1
+macos_thicken_font 0
 scrollback_lines 10000
 mouse_hide_wait 3
 macos_hide_titlebar no
