--- a/kitty.conf
+++ b/kitty.conf
@@ -4,7 +4,7 @@ font_family        Iosevka Regular
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
-font_size          13.0
+font_size          13.5
 adjust_line_height  0
 adjust_column_width -1
 disable_ligatures always
@@ -13,9 +13,11 @@ cursor #666
 macos_thicken_font 0
 scrollback_lines 10000
 mouse_hide_wait 3
-macos_hide_titlebar no
 
-tab_separator "|>"
+#: Mac
+macos_hide_titlebar no
+macos_option_as_alt no
+
 active_tab_foreground   #000
 active_tab_background   #eee
 active_tab_font_style   bold-italic
