--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,10 @@
 #: Kitty settings
 
-font_family        Iosevka Regular
+font_family        Fira Code Regular
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
-font_size          13.5
+font_size          13
 adjust_line_height  0
 adjust_column_width -1
 disable_ligatures always
