--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 #: Kitty settings
 
-font_family        Fira Code Regular
+font_family        Go Mono Regular
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
