--- a/kitty.conf
+++ b/kitty.conf
@@ -1,12 +1,14 @@
 #: Kitty settings
 
-font_family        Go Mono Regular
+font_family        monospace
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
 font_size          13
-adjust_line_height  0
+
+adjust_line_height  1
 adjust_column_width -1
+
 disable_ligatures always
 cursor_stop_blinking_after 10.0
 cursor #666
