--- a/kitty.conf
+++ b/kitty.conf
@@ -1,18 +1,18 @@
 #: Kitty settings
 
-font_family        monospace
+font_family        JetBrains Mono Regular
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
 font_size          13
 
-adjust_line_height  1
-adjust_column_width -1
+adjust_line_height  0
+adjust_column_width 0
 
 disable_ligatures always
 cursor_stop_blinking_after 10.0
 cursor #666
-macos_thicken_font 0
+macos_thicken_font 0.3
 scrollback_lines 10000
 mouse_hide_wait 3
 
