--- a/kitty.conf
+++ b/kitty.conf
@@ -1,20 +1,30 @@
 #: Kitty settings
 
-font_family        JetBrains Mono Regular
-#: font_family        Go Mono Regular
-# font_family        IBM Plex Mono Regular
-bold_font          auto
-italic_font        auto
-bold_italic_font   auto
+# font_family        Go Mono Regular
+# font_family        IMB Plex Mono Regular
+# bold_font          IMB Mono Bold
+# italic_font        IMB Mono Italic
+# bold_italic_font   IMB Mono Italic Bold
+
+# font_family        Source Code Pro Regular
+# bold_font          Source Code Pro Bold
+# italic_font        Source Code Pro Italic
+# bold_italic_font   Source Code Pro Italic Bold
+
+font_family        Cascadia Code Regular
+bold_font          Cascadia Code Bold
+italic_font        Cascadia Code Italic
+bold_italic_font   Cascadia Code Italic Bold
+
 font_size          13
 
-adjust_line_height  4
-adjust_column_width 0
+adjust_line_height  6
+adjust_column_width -1
 
 disable_ligatures always
 cursor_stop_blinking_after 10.0
 cursor #666
-macos_thicken_font 0.2
+macos_thicken_font 0.0
 scrollback_lines 10000
 mouse_hide_wait 3
 
@@ -28,3 +38,29 @@ active_tab_font_style   bold-italic
 inactive_tab_foreground #444
 inactive_tab_background #999
 inactive_tab_font_style normal
+
+map ctrl+l next_tab
+map ctrl+h previous_tab
+
+# Light theme
+background            #f4f4f4
+foreground            #3e3e3e
+cursor                #3f3f3f
+selection_background  #a9c1e2
+color0                #3e3e3e
+color8                #666666
+color1                #970b16
+color9                #de0000
+color2                #07962a
+color10               #87d5a2
+color3                #f7edc7
+color11               #f0cf06
+color4                #003e8a
+color12               #2e6cba
+color5                #e94691
+color13               #ffa29f
+color6                #89d1ec
+color14               #1cfafe
+color7                #ffffff
+color15               #ffffff
+selection_foreground  #f4f4f4
