--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,11 @@
 {
   "python.jediEnabled": false,
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "languageserver": {
+     "ocaml": {
+       "command": "ocaml-language-server",
+       "args": ["--stdio"],
+       "filetypes": ["ocaml"]
+     }
+  }
 }
