--- a/kitty.conf
+++ b/kitty.conf
@@ -1,22 +1,14 @@
 #: Kitty settings
 
-# font_family        Go Mono Regular
-# font_family        IMB Plex Mono Regular
-# bold_font          IMB Mono Bold
-# italic_font        IMB Mono Italic
-# bold_italic_font   IMB Mono Italic Bold
+# font_family        SF Mono Regular
+# font_family iA Writer Mono V Regular
+# bold_font          SF Mono Regular
+# italic_font        Go Smallcaps Italic
+# bold_italic_font   SF Mono Regular
 
-# font_family        Source Code Pro Regular
-# bold_font          Source Code Pro Bold
-# italic_font        Source Code Pro Italic
-# bold_italic_font   Source Code Pro Italic Bold
-
-font_family        Cascadia Code Regular
-bold_font          Cascadia Code Bold
-italic_font        Cascadia Code Italic
-bold_italic_font   Cascadia Code Italic Bold
-
-font_size          13
+font_family        Menlo Regular
+# font_family        Go Mono
+font_size          13.1
 
 adjust_line_height  6
 adjust_column_width -1
@@ -29,7 +21,7 @@ scrollback_lines 10000
 mouse_hide_wait 3
 
 #: Mac
-macos_hide_titlebar no
+hide_window_decorations no
 macos_option_as_alt no
 
 active_tab_foreground   #000
@@ -43,24 +35,5 @@ map ctrl+l next_tab
 map ctrl+h previous_tab
 
 # Light theme
-background            #f4f4f4
-foreground            #3e3e3e
-cursor                #3f3f3f
-selection_background  #a9c1e2
-color0                #3e3e3e
-color8                #666666
-color1                #970b16
-color9                #de0000
-color2                #07962a
-color10               #87d5a2
-color3                #f7edc7
-color11               #f0cf06
-color4                #003e8a
-color12               #2e6cba
-color5                #e94691
-color13               #ffa29f
-color6                #89d1ec
-color14               #1cfafe
-color7                #ffffff
-color15               #ffffff
-selection_foreground  #f4f4f4
+foreground #586e75
+background #fdf6e3
