Remove easy-motion as i never really use it

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,14 +1,17 @@
 #: Kitty settings
 
-# font_family        SF Mono Regular
-# font_family iA Writer Mono V Regular
-# bold_font          SF Mono Regular
-# italic_font        Go Smallcaps Italic
-# bold_italic_font   SF Mono Regular
+# font_family      JetBrains Mono Medium
+# font_family      AverageMono Regular
+# font_family      BPmono Regular
+# font_family      Go Mono Regular
+font_family      Victor Mono SemiBold
 
-font_family        Menlo Regular
-# font_family        Go Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 font_size          13.1
+
+placement_strategy top-left
 
 adjust_line_height  6
 adjust_column_width -1
@@ -16,7 +19,7 @@ adjust_column_width -1
 disable_ligatures always
 cursor_stop_blinking_after 10.0
 cursor #666
-macos_thicken_font 0.0
+macos_thicken_font 0.2
 scrollback_lines 10000
 mouse_hide_wait 3
 
@@ -36,4 +39,4 @@ map ctrl+h previous_tab
 
 # Light theme
 foreground #586e75
-background #fdf6e3
+background #fff
