--- a/kitty.conf
+++ b/kitty.conf
@@ -1,15 +1,11 @@
 #: Kitty settings
 
-# font_family      JetBrains Mono Medium
-# font_family      AverageMono Regular
-# font_family      BPmono Regular
-# font_family      Go Mono Regular
 font_family      Victor Mono SemiBold
-
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
 font_size          13.1
+
+bold_font        Victor Mono Bold
+italic_font      Victor Mono Regular
+bold_italic_font Victor Mono SemiBold Italic
 
 placement_strategy top-left
 
